esp-code/build/log/idf_py_stdout_output_37794
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/charles/Documents/github/CCI_UdeS/code/build/bootloader/esp-idf/esptool_py && /home/charles/.espressif/python_env/idf5.4_py3.11_env/bin/python /home/charles/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/charles/Documents/github/CCI_UdeS/code/build/bootloader/bootloader.bin
Bootloader binary size 0x64d0 bytes. 0x1b30 bytes (21%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/charles/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-421-g4523f2d674\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/charles/Documents/github/CCI_UdeS/code/build/config -I/home/charles/Documents/github/CCI_UdeS/code/main -I/home/charles/esp-idf/components/newlib/platform_include -I/home/charles/esp-idf/components/freertos/config/include -I/home/charles/esp-idf/components/freertos/config/include/freertos -I/home/charles/esp-idf/components/freertos/config/xtensa/include -I/home/charles/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/charles/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/charles/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/charles/esp-idf/components/freertos/esp_additions/include -I/home/charles/esp-idf/components/esp_hw_support/include -I/home/charles/esp-idf/components/esp_hw_support/include/soc -I/home/charles/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/charles/esp-idf/components/esp_hw_support/dma/include -I/home/charles/esp-idf/components/esp_hw_support/ldo/include -I/home/charles/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/charles/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/charles/esp-idf/components/heap/include -I/home/charles/esp-idf/components/log/include -I/home/charles/esp-idf/components/soc/include -I/home/charles/esp-idf/components/soc/esp32s3 -I/home/charles/esp-idf/components/soc/esp32s3/include -I/home/charles/esp-idf/components/hal/platform_port/include -I/home/charles/esp-idf/components/hal/esp32s3/include -I/home/charles/esp-idf/components/hal/include -I/home/charles/esp-idf/components/esp_rom/include -I/home/charles/esp-idf/components/esp_rom/include/esp32s3 -I/home/charles/esp-idf/components/esp_rom/esp32s3 -I/home/charles/esp-idf/components/esp_common/include -I/home/charles/esp-idf/components/esp_system/include -I/home/charles/esp-idf/components/esp_system/port/soc -I/home/charles/esp-idf/components/esp_system/port/include/private -I/home/charles/esp-idf/components/xtensa/esp32s3/include -I/home/charles/esp-idf/components/xtensa/include -I/home/charles/esp-idf/components/xtensa/deprecated_include -I/home/charles/esp-idf/components/lwip/include -I/home/charles/esp-idf/components/lwip/include/apps -I/home/charles/esp-idf/components/lwip/include/apps/sntp -I/home/charles/esp-idf/components/lwip/lwip/src/include -I/home/charles/esp-idf/components/lwip/port/include -I/home/charles/esp-idf/components/lwip/port/freertos/include -I/home/charles/esp-idf/components/lwip/port/esp32xx/include -I/home/charles/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/charles/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/charles/esp-idf/components/esp_driver_gpio/include -I/home/charles/esp-idf/components/driver/deprecated -I/home/charles/esp-idf/components/driver/i2c/include -I/home/charles/esp-idf/components/driver/touch_sensor/include -I/home/charles/esp-idf/components/driver/twai/include -I/home/charles/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/charles/esp-idf/components/esp_pm/include -I/home/charles/esp-idf/components/esp_ringbuf/include -I/home/charles/esp-idf/components/esp_driver_pcnt/include -I/home/charles/esp-idf/components/esp_driver_gptimer/include -I/home/charles/esp-idf/components/esp_driver_spi/include -I/home/charles/esp-idf/components/esp_driver_mcpwm/include -I/home/charles/esp-idf/components/esp_driver_ana_cmpr/include -I/home/charles/esp-idf/components/esp_driver_i2s/include -I/home/charles/esp-idf/components/esp_driver_sdmmc/include -I/home/charles/esp-idf/components/sdmmc/include -I/home/charles/esp-idf/components/esp_driver_sdspi/include -I/home/charles/esp-idf/components/esp_driver_sdio/include -I/home/charles/esp-idf/components/esp_driver_dac/include -I/home/charles/esp-idf/components/esp_driver_rmt/include -I/home/charles/esp-idf/components/esp_driver_tsens/include -I/home/charles/esp-idf/components/esp_driver_sdm/include -I/home/charles/esp-idf/components/esp_driver_i2c/include -I/home/charles/esp-idf/components/esp_driver_uart/include -I/home/charles/esp-idf/components/vfs/include -I/home/charles/esp-idf/components/esp_driver_ledc/include -I/home/charles/esp-idf/components/esp_driver_parlio/include -I/home/charles/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/charles/Documents/github/CCI_UdeS/code/managed_components/espressif__esp_tinyusb/include -I/home/charles/esp-idf/components/fatfs/diskio -I/home/charles/esp-idf/components/fatfs/src -I/home/charles/esp-idf/components/fatfs/vfs -I/home/charles/esp-idf/components/wear_levelling/include -I/home/charles/esp-idf/components/esp_partition/include -I/home/charles/Documents/github/CCI_UdeS/code/managed_components/espressif__tinyusb/src -I/home/charles/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/charles/Documents/github/CCI_UdeS/code=. -fmacro-prefix-map=/home/charles/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DCFG_TUSB_MCU=OPT_MCU_ESP32S3 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/charles/Documents/github/CCI_UdeS/code/main/main.c
/home/charles/Documents/github/CCI_UdeS/code/main/main.c: In function 'app_main':
/home/charles/Documents/github/CCI_UdeS/code/main/main.c:205:29: error: redefinition of 'acm_cfg'
  205 |     tinyusb_config_cdcacm_t acm_cfg = {
      |                             ^~~~~~~
/home/charles/Documents/github/CCI_UdeS/code/main/main.c:200:29: note: previous definition of 'acm_cfg' with type 'tinyusb_config_cdcacm_t'
  200 |     tinyusb_config_cdcacm_t acm_cfg = {0}; // the configuration uses default values
      |                             ^~~~~~~
In file included from /home/charles/Documents/github/CCI_UdeS/code/main/main.c:17:
/home/charles/Documents/github/CCI_UdeS/code/main/capacitive.h: At top level:
/home/charles/Documents/github/CCI_UdeS/code/main/capacitive.h:18:13: warning: 'capacitive_read_task' declared 'static' but never defined [-Wunused-function]
   18 | static void capacitive_read_task();
      |             ^~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
